--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tweenjs/tween.js": "^25.0.0",
     "async-mutex": "^0.5.0",
+    "axios": "^1.7.7",
     "chalk": "^5.3.0",
     "chokidar": "^4.0.1",
     "cli-spinner": "^0.2.10",
     "d3": "^7.9.0",
+    "dotenv": "^16.4.5",
     "esbuild-sass-plugin": "^3.3.1",
     "express": "^4.21.1",
     "flexsearch": "0.7.43",
@@ -63,6 +65,7 @@
     "mdast-util-to-hast": "^13.2.0",
     "mdast-util-to-string": "^4.0.0",
     "micromorph": "^0.4.5",
+    "moment": "^2.30.1",
     "pixi.js": "^8.5.2",
     "preact": "^10.24.3",
     "preact-render-to-string": "^6.5.11",
