--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "mdast-util-to-string": "^4.0.0",
     "micromorph": "^0.4.5",
     "moment": "^2.30.1",
+    "pexels": "^1.4.0",
     "pixi.js": "^8.5.2",
     "preact": "^10.24.3",
     "preact-render-to-string": "^6.5.11",
